--- a/facility-app/package.json
+++ b/facility-app/package.json
@@ -57,6 +57,7 @@
     "react-native-uuid": "^2.0.3",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
+    "react-router-dom": "^7.8.0",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
