--- a/facility-app/package.json
+++ b/facility-app/package.json
@@ -58,7 +58,8 @@
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
     "react-router-dom": "^7.8.0",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "react-native-maps": "1.20.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
