--- a/facility-app/package.json
+++ b/facility-app/package.json
@@ -48,6 +48,7 @@
     "react-dom": "19.0.0",
     "react-native": "0.79.4",
     "react-native-gesture-handler": "~2.24.0",
+    "react-native-maps": "^1.20.1",
     "react-native-modal-datetime-picker": "^18.0.0",
     "react-native-pdf-lib": "^1.0.0",
     "react-native-reanimated": "~3.17.4",
@@ -58,8 +59,7 @@
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
     "react-router-dom": "^7.8.0",
-    "uuid": "^11.1.0",
-    "react-native-maps": "1.20.1"
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
