build: remove unsupported kotlinVersion for expo-build-properties

--- a/facility-app/app.json
+++ b/facility-app/app.json
@@ -55,8 +55,7 @@
         {
           "android": {
             "enableProguardInReleaseBuilds": false,
-            "newArchEnabled": true,
-            "kotlinVersion": "1.9.25"
+            "newArchEnabled": true
           },
           "ios": {
             "newArchEnabled": true
