--- a/facility-web/package.json
+++ b/facility-web/package.json
@@ -10,12 +10,17 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.126",
+    "@types/react-signature-canvas": "^1.0.7",
+    "ajv": "^8.17.1",
+    "ajv-keywords": "^5.1.0",
     "dayjs": "^1.11.13",
+    "jspdf": "^3.0.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^4.12.0",
     "react-router-dom": "^7.7.0",
     "react-scripts": "5.0.1",
+    "react-signature-canvas": "^1.1.0-alpha.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
