--- a/facility-app/.gitignore
+++ b/facility-app/.gitignore
@@ -5,6 +5,7 @@ node_modules/
 
 # Expo
 .expo/
+.expo-shared/
 dist/
 web-build/
 expo-env.d.ts
@@ -45,3 +46,4 @@ constants/supabaseAdmin.ts
 supabaseAdmin.ts
 
 app-example
+.expo/
