--- a/facility-app/eas.json
+++ b/facility-app/eas.json
@@ -1,21 +1,32 @@
 {
   "cli": {
-    "version": ">=3.13.0"
+    "version": ">=3.13.0",
+    "appVersionSource": "remote"
   },
   "build": {
+    "development": {
+      "developmentClient": true,
+      "distribution": "internal",
+      "android": {
+        "buildType": "apk"
+      }
+    },
     "preview": {
       "android": {
         "buildType": "apk"
-      }},
-    "preview": {
+      },
       "distribution": "internal"
     },
     "production": {
       "autoIncrement": true
+    },
+    "production-apk": {
+      "android": {
+        "buildType": "apk"
+      }
     }
   },
   "submit": {
     "production": {}
   }
-
 }
